Code fixes and cleanup Stretch completed

--- a/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
+++ b/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
@@ -16,3 +16,6 @@
 .card-content {
     padding: 2rem;
 }
+.card-content span {
+    margin: 0;
+}
